5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1578_1334.log
== SUBMITION (2019-03-13 18:52:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 80 / 10)

print("Resto: ", ...)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.175831
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  Ellipsis
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:54:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 80 / 10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.137521
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2 ** 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:54:55) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 80 / 10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.181563
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2 ** 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:55:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 80/10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.207456
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:05) 
-- CODE:
print("Adicao: ",5+3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",2*4)

print("Divisao: ",80/10)

print("Resto: ",(round(62/8))

print("Potenciacao: ",2**3)
-- EXECUTION TIME:
0.136012
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ",2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:06) 
-- CODE:
print("Adicao: ",5+3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",2*4)

print("Divisao: ",80/10)

print("Resto: ",(round(62/8))

print("Potenciacao: ",2**3)
-- EXECUTION TIME:
0.132408
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ",2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:06) 
-- CODE:
print("Adicao: ",5+3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",2*4)

print("Divisao: ",80/10)

print("Resto: ",(round(62/8))

print("Potenciacao: ",2**3)
-- EXECUTION TIME:
0.199999
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ",2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:14) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 80/10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.141788
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:14) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 80/10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.120207
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:15) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 80/10)

print("Resto: ", (round(62/8))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.178554
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:56:23) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 80/10)

print("Resto: ", round(62/8))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.172229
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
